--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ html{
     position: relative;
     max-width: 480px;
     margin: 0 auto;
-    /* position: absolute;
+    /* position: absolute;git add
     top:50%;
     left: 50%;
     transform: translate(-50%,-50%); */
