--- a/main.css
+++ b/main.css
@@ -50,6 +50,25 @@ button{
     color: var(--text-color);
     font-size: 14pt;
     font-weight: bold;
+
+}
+.btnMusic {
+    display: flex;
+    font-size: 15pt;
+    align-items: center;
+    border: 3px solid var(--primary-color);
+    padding: 0 8px;
+    border-radius: 3px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.btnMusic.playing{
+    opacity: 0.5;
+    color: var(--primary-color);
+    cursor: pointer;
+}
+#audio{
+    display: none;
 }
 .board-container{
     position: relative;
